--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,64 @@
-#logoBar{
+#logoBar {
   width: 30vw;
   height: 100vh;
+  color: green;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-#siteLogo{
+#siteLogo {
   width: 100%;
 }
 body {
   display: flex;
+  background-color: aliceblue;
+  justify-content: center;
+  align-content: space-evenly;
 }
-#staffGallery{
+#staffGallery {
   width: 70vw;
   display: inherit;
-
+  flex-wrap: wrap;
+  justify-content: space-evenly center;
+  justify-content: center;
 }
-.galleryImage{
+.galleryImage {
   width: 100%;
   height: auto;
   height: 300px;
+}
+.card {
+  background-color: bisque;
+  padding: 10px;
+  margin: 10px;
+  border: 8px solid red;
+  height: 400px;
+  width: 175px;
+  align-content: center;
+  color: rgb(16, 18, 61);
+}
+img {
+  object-fit: contain;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    flex-direction: column;
+    align-items: center;
+  }
+  #logoBar {
+    width: 100vw;
+    height: 80vw;
+    color: green;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    align-content: center;
+    text-align: center;
+    border: 4px solid blue;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 25px;
+  }
+  #staffGallery {
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
 }
